fix(homepage): overflow

--- a/src/pages/homepage/homepage.module.scss
+++ b/src/pages/homepage/homepage.module.scss
@@ -1,5 +1,6 @@
 .main {
   display: grid;
+  overflow: hidden;
 }
 .activeOrUpcoming {
   font-size: 36px;
